--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,7 @@
 [project]
 name = "kaggle-pacakge"
 version = "0.1.0"
-description = "Add your description here"
+description = "Starter template for Kaggle and ML competitions."
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = [
-    "kaggle>=1.7.4.5",
-]
+dependencies = ["kaggle>=1.7.4.5"]
